<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frame_page_bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_230"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:singleLine="true"
            android:fontFamily="cursive"
            style="@style/frame_toolbar_title"
            android:textSize="@dimen/sp_18"/>

        <ImageView
            android:id="@+id/analysisIv"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:scaleType="fitXY"
            android:layout_alignBottom="@id/titleTv"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_16"
            android:src="@drawable/ic_analysis"/>

        <TextView
            android:id="@+id/reviewDayCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_30"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:textSize="@dimen/sp_50"
            android:textStyle="bold"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviewDayCountTv"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/white_50"
            android:text="@string/days_of_review"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reviewCountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray_99"
                android:textSize="@dimen/sp_14"
                android:text="@string/review"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/targetCountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray_99"
                android:textSize="@dimen/sp_14"
                android:text="@string/target"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/notebookLayout"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteCountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:drawableRight="@drawable/icon_next"
                android:drawablePadding="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray_99"
                android:textSize="@dimen/sp_14"
                android:text="@string/note_book"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/studyBtn"
        android:layout_width="@dimen/dp_280"
        android:layout_marginTop="@dimen/dp_100"
        style="@style/frame_button_style"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="@string/study_now"/>

</LinearLayout>